menus, main window title, icons are not reset when capture is interrupted before any data arrives
This issue was migrated from bug 7129 in our old bug tracker.
Original bug information:
Reporter: Martin Kaiser
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: x86
Version: Git
Attachments:
main_capture_failed.patch: reset icon, menus, title when a capture failed
main_capture_failed_v2.patch: clear icons, title, menus when a capture failed (clean version)